# coal-pool-server

./: .env.example  .gitignore  Cargo.toml  rust-toolchain.toml
migrations/2024-11-14-221921_add_ore_tracking/: down.sql  up.sql
migrations/2024-11-22-211932_add_ore_claims/: down.sql  up.sql
migrations/2024-11-25-214526_add_extra_resources/: down.sql  up.sql
migrations/2024-12-30-164419_add_more_extra_resources/: down.sql  up.sql
migrations/2025-01-01-095124_add_extra_resources_generation_linked_challenge/: down.sql  up.sql
migrations/2025-01-02-132136_extra_resources_chromium_not_null/: down.sql  up.sql
migrations/2025-01-13-153156_difficulty_in_earning/: down.sql  up.sql
src/: app_database.rs  app_rr_database.rs  coal_utils.rs  main.rs  message.rs  models.rs  ore_utils.rs  proof_migration.rs  routes.rs  schema.rs  send_and_confirm.rs
src/coal_api/: consts.rs  error.rs  event.rs  guild_loaders.rs  instruction.rs  loaders.rs  mod.rs  utils.rs
src/coal_api/state/: bus.rs  config.rs  mod.rs  proof.rs  proof_v2.rs  reprocessor.rs  tool.rs  treasury.rs
src/coal_guilds_api/: consts.rs  error.rs  instruction.rs  mod.rs  sdk.rs
src/coal_guilds_api/state/: config.rs  guild.rs  invite.rs  member.rs  mod.rs
src/systems/: chromium_reprocessing_system.rs  claim_system.rs  client_message_handler_system.rs  diamond_hands_system.rs  handle_ready_clients_system.rs  message_text_all_clients_system.rs  mod.rs  nft_distribution_system.rs  pong_tracking_system.rs  pool_mine_success_system.rs  pool_submission_system.rs  proof_tracking_system.rs
