[package]
name = "coal-pool-server"
version = "3.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytemuck = "1.14.3"
drillx = "2.0.0"
futures = "0.3.30"
coal-api = "2.6.0"
coal-utils = "2.5.2"
coal-guilds-api = "1.1.0"
ore-api = "3.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-sdk = "1.18.12"
solana-client = "1.18.12"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }
bincode = "1.3.3"
rand = "0.8.5"
clap = { version = "4.5.14", features = ["derive"] }
diesel = { version = "2.2.3", features = ["mysql", "chrono"] }
chrono = "0.4.38"
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
base64 = "0.22.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }
solana-account-decoder = "1.18.13"
tracing-appender = "0.2.3"
solana-transaction-status = "1.18.22"
uuid = { version = "1.10.0", features = ["v4"] }
steel = "1.3.0"

