[package]
name = "coal-pool-server"
version = "4.2.2"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
drillx = { version = "2.2", features = ["solana"] }
futures = "0.3.30"
ore-api = "3.6.0-beta"
ore-boost-api = "4.0.0-beta"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
solana-sdk = "=2.1"
solana-program = "=2.1"
solana-client = "=2.1"
tokio = { version = "1.39.2", features = ["full", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
bincode = "1.3.3"
rand = "0.9.0"
clap = { version = "4.5.14", features = ["derive"] }
diesel = { version = "2.2.3", features = ["mysql", "chrono"] }
chrono = "0.4.38"
deadpool-diesel = { version = "0.6.1", features = ["mysql"] }
base64 = "0.22.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
solana-account-decoder = "=2.1"
tracing-appender = "0.2.3"
solana-transaction-status = "=2.1"
uuid = { version = "1.10.0", features = ["v4"] }
steel = "4.0.0"
b64 = "0.4.0"
jito-sdk-rust = "0.2.0"
rpassword = "7.3.1"
openssl = { version = "0.10.69", features = ["vendored"] }
static_assertions = "1.1.0"
array-const-fn-init = "0.1.1"
thiserror = "2.0.12"
num_enum = "0.7.2"
const-crypto = "0.3.0"
mpl-token-metadata = "5.1"
mpl-core = "0.9.1"